<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/main_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context="com.kamontat.checkidnumber.view.MainActivity"
            tools:ignore="UselessParent">

        <TextView
                android:text="@string/input_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/fragment_message"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/fragment_input_id_number"
                android:imeOptions="actionGo"
                android:hint="@string/input_hint"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_gravity="start"
                android:id="@+id/fragment_status_message"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:id="@+id/fragment_btn"
                android:text="@string/enter"
                android:enabled="false"
                android:layout_gravity="end"/>
    </LinearLayout>
</RelativeLayout>